Fri Mar 17 11:06:59 2000  Philippe De Muyter  <phdm@macqel.be>

	* language.c (set_lang_str): Do not call `free' for a null pointer.
        (set_type_str, set_range_str): Ditto.

2000-03-16  Jim Blandy  <jimb@redhat.com>

        * i386-linux-nat.c (i386_linux_saved_pc_after_call): Lost in the
	merge; reinstated.

	* solib.c (current_sos): Be more careful about freeing the new
	so_list node if an error occurs.

	* i386-tdep.c (LINUX_SIGTRAMP_INSN0, LINUX_SIGTRAMP_OFFSET0,
	LINUX_SIGTRAMP_INSN1, LINUX_SIGTRAMP_OFFSET1,
	LINUX_SIGTRAMP_INSN2, LINUX_SIGTRAMP_OFFSET2, linux_sigtramp_code,
	LINUX_SIGTRAMP_LEN, i386_linux_sigtramp_start,
	LINUX_RT_SIGTRAMP_INSN0, LINUX_RT_SIGTRAMP_OFFSET0,
	LINUX_RT_SIGTRAMP_INSN1, LINUX_RT_SIGTRAMP_OFFSET1,
	linux_rt_sigtramp_code, LINUX_RT_SIGTRAMP_LEN,
	i386_linux_rt_sigtramp_start, i386_linux_in_sigtramp,
	i386_linux_sigcontext_addr, LINUX_SIGCONTEXT_PC_OFFSET,
	i386_linux_sigtramp_saved_pc, LINUX_SIGCONTEXT_SP_OFFSET,
	i386_linux_sigtramp_saved_sp):	Deleted.  These all implement
	Linux-specific signal trampoline detection, and should be moved
	to...
	* i386-linux-nat.c: ... here.
	* config/i386/tm-linux.h (I386_LINUX_SIGTRAMP): No need to define
	this any more, since we're not enabling OS-specific code in a
	OS-independent file.
	
2000-03-16  Eli Zaretskii  <eliz@is.elta.co.il>

	* Makefile.in (go32-nat.o): Add prerequisites.
	(ALLDEPFILES): Add go32-nat.c.

2000-03-15  Michael Snyder  <msnyder@cleaver.cygnus.com>

	From "Peter.Schauer" <Peter.Schauer@regent.e-technik.tu-muenchen.de>
	* symfile.c (reread_symbols):  Clear msymbol hash table.

2000-03-15  Jim Blandy  <jimb@redhat.com>

	Deal with the inferior unloading shared objects.
	* solib.c (current_sos): New function, replacing find_solib.
	(find_solib): Deleted.
	(free_so): New function.
	(clear_solib): Call free_so, instead of writing it out.
	(solib_add): Rewritten: compare the inferior's current list of
	shared objects with GDB's list, and do the required loads and